--- a/Src/Areas/Admin/Views/Partial/General/MainNavbar.cshtml
+++ b/Src/Areas/Admin/Views/Partial/General/MainNavbar.cshtml
@@ -18,7 +18,7 @@
                 </a>
                 <div class="dropdown-menu dropdown-content">
                     <ul class="list dropdown-content-body width-200 no-padding">
-                        <li onclick="pageLoad('/Admin/Order', 'لیست سفارش ها','orderList')" class="list-group no-padding no-border no-margin"><a class="list-group-item" href="#">لیست سفارش ها</a></li>
+                        <li onclick="pageLoad('/Admin/Order', 'لیست منو ها','orderList')" class="list-group no-padding no-border no-margin"><a class="list-group-item" href="#">لیست منو ها</a></li>
                         <li class="list-group no-padding no-border no-margin">
                             <a onclick="pageLoad('/Admin/Product', 'لیست محصولات','procList')" class="list-group-item" href="#">لیست محصولات</a>
                         </li>
