--- a/Src/Areas/Admin/Views/Partial/General/MainNavigation.cshtml
+++ b/Src/Areas/Admin/Views/Partial/General/MainNavigation.cshtml
@@ -51,7 +51,7 @@
             <li>
                 <a><span>محتوا</span><i class="icon-newspaper"></i></a>
                 <ul>
-                    <li><a href="#"><i class="icon-images2"></i><span> اسلایدر</span></a></li>
+                    <li><a href="#"><i class="icon-images2"></i><span> مدیا</span></a></li>
                     <li>
                         <a href="#"><i class="icon-quill4"></i><span>مطالب</span></a>
                         <ul>
@@ -66,6 +66,9 @@
                             <li><a href="#">افزودن صفحه</a></li>
                             <li><a href="#">لیست صفحات</a></li>
                         </ul>
+                    </li>
+                    <li>
+                        <a onclick="pageLoad('/Admin/Menu', 'منو','menuList')" data-target="menuList"><i class="icon-menu"></i><span>منو</span></a>
                     </li>
                 </ul>
             </li>
