fix menu slider and home page lists

--- a/Src/Areas/Admin/Views/Partial/General/MainNavigation.cshtml
+++ b/Src/Areas/Admin/Views/Partial/General/MainNavigation.cshtml
@@ -51,7 +51,7 @@
             <li>
                 <a><span>محتوا</span><i class="icon-newspaper"></i></a>
                 <ul>
-                    <li><a href="#"><i class="icon-images2"></i><span> مدیا</span></a></li>
+                    <li><a onclick="pageLoad('/Admin/Media', 'مدیا','mediaList')" data-target="mediaList"><i class="icon-images2"></i><span> مدیا</span></a></li>
                     <li>
                         <a href="#"><i class="icon-quill4"></i><span>مطالب</span></a>
                         <ul>
