--- a/Src/Content/Css/vendor.css
+++ b/Src/Content/Css/vendor.css
@@ -8585,6 +8585,7 @@ a.badge:hover, a.badge:focus {
 
     .iziToast > .iziToast-body {
         position: relative;
+        direction: rtl;
         padding: 0 0 0 10px;
         height: 100%;
         min-height: 36px;
