--- a/Src/Views/Partials/General/MainSlider.cshtml
+++ b/Src/Views/Partials/General/MainSlider.cshtml
@@ -1,6 +1,10 @@
-﻿<section class="hero-slider">
+﻿@model List<Src.Models.ViewData.Table.Media.ViewTbl_Media>
+<section class="hero-slider">
     <div class="owl-carousel large-controls dots-inside owl-loaded owl-drag" data-owl-carousel="{ &quot;nav&quot;: true, &quot;dots&quot;: true, &quot;loop&quot;: true, &quot;rtl&quot;: true, &quot;autoplay&quot;: false, &quot;autoplayTimeout&quot;: 7000 }">
-        <div class="owl-slide"><a><img class="" src="~/Content/Images//hero-slider/01.jpg" alt="Puma Backpack"></a></div>
-        <div class="owl-slide"><a><img class="" src="~/Content/Images//hero-slider/01.jpg" alt="Puma Backpack"></a></div>
+        @foreach (var item in Model)
+        {
+            string src = $"/Files/Media/{item.ID}.jpg";
+            <div class="owl-slide"><a href="@item.Link"><img src="@src" alt="@item.Title"></a></div>
+        }
     </div>
 </section>
