--- a/Src/Views/Partials/General/PopularBrands.cshtml
+++ b/Src/Views/Partials/General/PopularBrands.cshtml
@@ -1,4 +1,5 @@
-﻿<img class="d-block w-110 opacity-75 m-auto" src="~/Content/Images//brands/01.png" alt="IBM">
+﻿
+<img class="d-block w-110 opacity-75 m-auto" src="~/Content/Images//brands/01.png" alt="IBM">
 <img class="d-block w-110 opacity-75 m-auto" src="~/Content/Images//brands/02.png" alt="Sony">
 <img class="d-block w-110 opacity-75 m-auto" src="~/Content/Images//brands/03.png" alt="HP">
 <img class="d-block w-110 opacity-75 m-auto" src="~/Content/Images//brands/04.png" alt="Canon">
