--- a/Src/Content/Css/styles.css
+++ b/Src/Content/Css/styles.css
@@ -103,7 +103,7 @@
     }
 
         .site-header .site-menu > ul > li .mega-menu > li .mega-menu-title {
-            max-width: 30%;
+            max-width: 500px;
             display: block;
             margin-bottom: 16px;
             padding-bottom: 10px;
@@ -4835,7 +4835,7 @@ a.alert {
     }
 
 .hero-slider .owl-carousel .owl-item img {
-    height: 580px;
+    max-height: 580px;
     object-fit: cover;
     object-position: center
 }
@@ -7061,13 +7061,12 @@ video {
 
         .product-card .product-thumb > img {
             width: 100%;
-            padding: 15px;
             margin: 0 auto;
             display: block;
-            max-width: 250px;
-            max-height: 250px;
+            width: 200px;
+            height: 200px;
             object-fit: cover;
-            border-radius: 18px;
+            border-radius: 6px;
             object-position: center
         }
 
