--- a/Src/Views/Product/Search.cshtml
+++ b/Src/Views/Product/Search.cshtml
@@ -26,7 +26,7 @@
                         <label for="sorting">مرتب سازی بر اساس :</label>
                         @Html.DropDownListFor(item => Model.Params.SortBy,
                                         EnumHelper.GetSelectList(typeof(Src.Models.ViewData.Table.Product.SortType)),
-                                        new { @class = "form-control" , id= "sorting" })
+                                        new { @class = "form-control", id = "sorting" })
 
                         <span class="text-muted"></span><span>@Model.ResultCount کالا</span>
                     </div>
@@ -36,68 +36,7 @@
             <div class="row" dir="rtl">
                 @foreach (var item in Model.Results)
                 {
-                    string imgPath = $"/Files/Product/{item.ID}.jpg";
-                    <div class="col-lg-4 col-sm-6 col-xs-12">
-                        <div class="product-card mb-30">
-                            <div class="rating-stars">
-                                @{
-                                    if (item.Rate > 2)
-                                    {
-                                        int i = 0;
-                                        for (i = 0; i < item.Rate; i++)
-                                        {
-                                            <i class="icon-star filled"></i>
-                                        }
-                                        if (i < 5)
-                                        {
-                                            int diff = 5 - i;
-                                            for (i = 0; i < diff; i++)
-                                            {
-                                                <i class="icon-star"></i>
-                                            }
-                                        }
-                                    }
-                                }
-                            </div>
-                            @if (item.Type == "پیشنهاد ویژه")
-                            {
-                                <div class="product-badge bg-danger">@item.Type</div>
-                            }
-                            <a class="product-thumb" href="/Product/ALP-@item.ID/@item.Title"><img src="@imgPath" alt="@item.Title"></a>
-                            <div class="product-card-body">
-                                <h3 class="product-title" lang="en"><a href="/Product/ALP-@item.ID/@item.Title">@item.Title</a></h3>
-                                @if (item.Type == "اتمام موجودی" || item.Type == "توقف تولید")
-                                {
-                                    <h4 class="product-price">---------------</h4>
-                                }
-                                else
-                                {
-                                    <h4 class="product-price">
-                                        @if (item.OffPrice != "0")
-                                        {
-                                            <del>@item.Price</del>
-                                            @item.OffPrice
-                                        }
-                                        else
-                                        {
-                                            @item.Price
-                                        }
-                                        تومان
-                                    </h4>
-                                }
-                            </div>
-                            <div class="product-button-group">
-                                @if (item.Type == "اتمام موجودی" || item.Type == "توقف تولید")
-                                {
-                                    <span class="product-button"><i class="icon-x-circle"></i><span>@item.Type</span></span>
-                                }
-                                else
-                                {
-                                    <a class="product-button"><i class="icon-shopping-cart"></i><span>افزودن به سبد خرید</span></a>
-                                }
-                            </div>
-                        </div>
-                    </div>
+                    @Html.Partial("~/Views/Partials/General/Product.cshtml", Tuple.Create(item, "col-lg-4"))
                 }
             </div>
             <!-- Pagination-->
